auth_completed_test_passed
